2011-02-19  vadim  <vadim@netcitadel.com>

	* configlets/bsd/update_addresses: fixes #2116 "When CARP
	interface IP address can't be assigned error or warning should
	appear". The problem actually affects any type of interface.
	Generated script should abort with an error termination code
	when ifconfig fails to assign ip address to an interface.

2011-02-17  vadim  <vadim@netcitadel.com>

	* NATCompiler_ipt.cpp (processNext): see #2097 #133 "support for
	inbound and outbound interface columns in iptables NAT
	rules". This also addresses SF feature requests 1954286 "DNAT with
	interface as condition not possible" and 621023 "manipulating
	interface in NAT rule".

	* platforms.cpp (setDefaultFailoverGroupAttributes): fixes #2101
	"CARP interfaces are set with same advskew". When new PF cluster
	is created, master advskew paramerer will be set to 10 and backup
	to 20 to make it deterministic.

	* NATCompiler_ipf.cpp (processNext): see #133, fixes #2108 making
	nat compiler for ipfilter work with interface column, however the
	column is not exposed to the user. Compiler behavior should be
	backwards compatible with older versions of fwbuilder.

	* NATCompiler_pf.cpp (processNext): see #133. MErged code from the
	branch, running tests. Making sure rules that have firewall
	object in ODst and interface columnblank end up with rdr command
	without "on interface" clause as before.

	* stopped making builds on Ubuntu Hardy. Old Qt (4.4.1) means more
	and more parts of the code do not compile and require workarounds,
	sometimes with loss of functionality in the GUI. v4.1.3 will be
	the last officially released version of fwbuilder to work on
	Hardy.

2011-02-16  vadim  <vadim@netcitadel.com>

	* NATCompiler_pf.cpp (compile): fixes #2095 added support for
	groups and multiple objects in column "Interface" for PF NAT
	rules. These translate into { em0 em1 em2 } groups in generated
	pf.conf lines.

	* NATCompiler_pf.cpp (compile): fixes #2096 added support for